--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,4 +12,4 @@ github: bowser-2077 # Replace with up to 4 GitHub Sponsors-enabled usernames e.g
 # polar: # Replace with a single Polar username
 # buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 # thanks_dev: # Replace with a single thanks.dev username
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://discord.gg/SSWZzCD5cX']
